force-app/main/default/objects/Case_Result__c/Case_Result__c.object-meta.xml
<CustomObject>
    <description>Per-case outcome of a calibration run. Master-detail child of Calibration_Run__c. 90-day purge.</description>
    <label>Case Result</label>
    <nameField>
        <displayFormat>RES-{000000}</displayFormat>
        <label>Case Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>