force-app/main/default/objects/Case_Result__c/fields/Actions_Invoked__c.field-meta.xml
<CustomField>
    <fullName>Actions_Invoked__c</fullName>
    <label>Actions Invoked</label>
    <description>Comma or JSON list of actions the agent invoked during the turn.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>