force-app/main/default/objects/Case_Result__c/fields/Calibration_Run__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Run__c</fullName>
    <label>Calibration Run</label>
    <description>The run this per-case result belongs to.</description>
    <type>MasterDetail</type>
    <referenceTo>Calibration_Run__c</referenceTo>
    <relationshipLabel>Case Results</relationshipLabel>
    <relationshipName>Case_Results</relationshipName>
</CustomField>