force-app/main/default/objects/Case_Result__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <label>Credits</label>
    <description>Flex Credits consumed evaluating this single case.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>