force-app/main/default/objects/Case_Result__c/fields/Deviation_Score__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Score__c</fullName>
    <label>Deviation Score</label>
    <description>Distance from the blessed baseline, 0 (identical) to 1 (maximally divergent).</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>