force-app/main/default/objects/Case_Result__c/fields/Failed_Assertions__c.field-meta.xml
<CustomField>
    <fullName>Failed_Assertions__c</fullName>
    <label>Failed Assertions</label>
    <description>JSON array of the assertions that failed, with their verdicts.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>