force-app/main/default/objects/Case_Result__c/fields/Golden_Case__c.field-meta.xml
<CustomField>
    <fullName>Golden_Case__c</fullName>
    <label>Golden Case</label>
    <description>The golden case that produced this result.</description>
    <type>Lookup</type>
    <referenceTo>Golden_Case__c</referenceTo>
    <relationshipLabel>Case Results</relationshipLabel>
    <relationshipName>Case_Results</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>