force-app/main/default/objects/Case_Result__c/fields/Grounding_Sources__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Sources__c</fullName>
    <label>Grounding Sources</label>
    <description>Knowledge or data sources the response was grounded in.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>