force-app/main/default/objects/Case_Result__c/fields/Judged__c.field-meta.xml
<CustomField>
    <fullName>Judged__c</fullName>
    <label>Judged</label>
    <description>False when the prefilter resolved the case without a judge invocation.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>