force-app/main/default/objects/Case_Result__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <label>Passed</label>
    <description>True when the case satisfied every active assertion.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>