force-app/main/default/objects/Case_Result__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <description>The agent's response captured for this case. Transcript-sensitive; readable only with Fleet_View_Transcripts.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>