force-app/main/default/objects/Case_Result__c/fields/Topic_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Topic_Confidence__c</fullName>
    <label>Topic Confidence</label>
    <description>Confidence of the topic selection, 0 to 1.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>