force-app/main/default/objects/Case_Result__c/fields/Topic_Selected__c.field-meta.xml
<CustomField>
    <fullName>Topic_Selected__c</fullName>
    <label>Topic Selected</label>
    <description>The topic the agent routed to for this turn.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>