force-app/main/default/objects/Case_Result__c/fields/Trace_Key__c.field-meta.xml
<CustomField>
    <fullName>Trace_Key__c</fullName>
    <label>Trace Key</label>
    <description>Pointer into Fleet_Trace__b for the full turn archive of this result.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>